# db-scan

./: .gitignore  Cargo.toml  Makefile  README.md  SPEC.md
.github/workflows/: ci.yml
docs/: ERROR_HANDLING_DESIGN.md
src/: config.rs  database_portal.rs  logging.rs  main.rs  pipeline.rs  prometheus.rs  task_group.rs  timings.rs
src/prometheus/: models.rs
src/scan/: db.rs
src/v2/: cluster.rs  db.rs  mod.rs  node.rs  prometheus.rs  writer.rs
src/v2/analyze/: mod.rs
src/v2/db/: db_error.rs
src/v2/scan/: health_check_primary.rs  health_check_replica.rs  mod.rs
tests/fixtures/healthy/: NON_FAILOVER_CLUSTER.json
tests/fixtures/unhealthy/: CHAINED_REPLICA.json  DB001_REBUILDING_AFTER_FAILOVER.json  DB001_UNREACHABLE_FAILOVER_WITH_REPLICA.json
tests/prometheus/: dev_pg_app001_filesystem.vcr.json  get_filesystem_used_bytes.vcr.json
