[package]
name = "db-scan"
version = "0.1.0"
edition = "2024"

[features]
default = []
# Enable Prometheus metric polling for backup progress tracking
prometheus = ["regex-lite", "reqwest-middleware"]

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive", "env"] }
error-stack = "0.6.0"
futures = "0.3.31"
native-tls = "0.2.14"
postgres-native-tls = "0.5.1"
redact = "0.1.11"
regex-lite = { version = "0.1", optional = true }
reqwest = { version = "0.13", features = ["json", "query"] }
reqwest-middleware = { version = "0.5", optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
rvcr = { git = "https://github.com/robert-sjoblom/rvcr", tag = "v4" }
